--- a/app/src/main/res/layout/dashboard_activity.xml
+++ b/app/src/main/res/layout/dashboard_activity.xml
@@ -48,7 +48,7 @@
         <LinearLayout
             android:id="@+id/dash_header"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/size_80"
+            android:layout_height="@dimen/size_90"
             android:paddingLeft="10dp"
             android:paddingRight="10dp">
 
@@ -56,7 +56,7 @@
                 android:id="@+id/layout_header"
                 layout="@layout/dashboard_header"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="90dp">
 
             </include>
         </LinearLayout>
