--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -29,6 +29,7 @@
     <dimen name="size_64">64dp</dimen>
     <dimen name="size_80">80dp</dimen>
     <dimen name="size_90">90dp</dimen>
+    <dimen name="size_95">95dp</dimen>
     <dimen name="size_100">100dp</dimen>
     <dimen name="size_110">110dp</dimen>
     <dimen name="size_120">120dp</dimen>
