--- a/app/src/main/res/layout/activity_lead.xml
+++ b/app/src/main/res/layout/activity_lead.xml
@@ -156,10 +156,9 @@
                     android:layout_marginTop="@dimen/layout_margin"
                     android:layout_weight="1"
                     android:background="@drawable/edit_background"
-                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                     android:drawablePadding="@dimen/view_padding"
                     android:hint="@string/hintcustid"
-                    android:inputType="textPersonName"
+                    android:inputType="text"
                     android:maxLength="50"
                     android:padding="@dimen/view_padding"
                     android:singleLine="true"
