create lead and update lead showing prospective product dialog properly

--- a/app/src/main/res/layout/product_custom_dialog.xml
+++ b/app/src/main/res/layout/product_custom_dialog.xml
@@ -6,43 +6,61 @@
     <LinearLayout
         android:id="@+id/linear_alert"
         android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_height="600dp"
         android:background="@drawable/customborder"
         android:orientation="vertical">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="50dp"
+            android:layout_marginStart="50dp"
             android:layout_margin="@dimen/size_5"
             android:background="@color/colorGray">
-
 
             <TextView
                 android:id="@+id/textcheck"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="5dp"
                 android:padding="@dimen/view_padding"
                 android:text="Check all"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textColor="@color/coloryellow"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
 
             <TextView
                 android:id="@+id/textuncheck"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:layout_toRightOf="@+id/textcheck"
                 android:padding="@dimen/view_padding"
                 android:text="Uncheck all"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textColor="@color/coloryellow"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:layout_alignBaseline="@+id/textcheck"
+                android:layout_alignBottom="@+id/textcheck"
+                android:layout_centerHorizontal="true" />
 
+            <Button
+                android:id="@+id/btn1_submit"
+                android:text="Submit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/coloryellow"
+                android:textStyle="bold"
+                android:visibility="visible"
+                android:layout_alignBaseline="@+id/textuncheck"
+                android:layout_alignBottom="@+id/textuncheck"
+                android:layout_toRightOf="@+id/textuncheck"
+                android:layout_toEndOf="@+id/textuncheck"
+                android:layout_marginLeft="50dp"
+                android:layout_marginStart="50dp" />
 
         </RelativeLayout>
-
 
         <ScrollView
             android:id="@+id/mechantScrollview"
@@ -55,8 +73,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
-
             </LinearLayout>
+
         </ScrollView>
 
 
