--- a/app/src/main/res/layout/activity_lead_update.xml
+++ b/app/src/main/res/layout/activity_lead_update.xml
@@ -898,13 +898,15 @@
                             android:textAppearance="?android:attr/textAppearanceMedium"
                             android:textColor="@android:color/black" />
 
-                        <Spinner
-                            android:id="@+id/spin_opportunity_pitched"
-                            style="@style/spinner_style"
+                        <TextView
+                            android:id="@+id/txt1_prospective_product2"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/layout_margin"
                             android:layout_weight="1"
-                            android:drawablePadding="@dimen/view_padding" />
+                            android:text="@string/prospectiveproduct"
+                            android:textAppearance="?android:attr/textAppearanceMedium"
+                            android:textColor="@android:color/black" />
                     </LinearLayout>
 
                     <LinearLayout
